Tweaked margins and centered logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body> 
     <header>
     <!-- logo -->
-    <img src="images/dpd-logo-01.svg" alt="DPD logo">
+      <img src="images/dpd-logo-01.svg" alt="DPD logo">
       
     <!-- main nav -->
       <nav>
@@ -45,11 +45,11 @@
     </article>
 
     <!-- skills -->
-    <article>
+    <article class="skills">
      <h3>Skills</h3>
-      <i class="fa fa-desktop"></i>
-      <i class="fa fa-video-camera"></i>
-      <i class="fa fa-camera"></i>
+      <i class="fa fa-desktop"></i><p>Graphic Design</p>
+      <i class="fa fa-video-camera"></i><p>Videography</p>
+      <i class="fa fa-camera"></i><p>Photography</p>
     </article>
 
     <!-- about me -->
@@ -61,6 +61,7 @@
     <!-- contact -->
     <article class="contact">
       <h5>Contact</h5>
+      <p>Placeholder</p>
     </article>
     
     <footer>
