--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,12 @@
       </nav>
     </header>
     
-    <!-- introduction -->
-    <article class="intro">
-      <h1>Hi, I'm Dean Davidson.</h1>
-      <p class="bodycopy">I'm a visual artist living in Bellingham, Washington, with my wife, son, two cats, frogs, and Rosie the tarantula. I specialize in graphic design with brand development, print layout, and motion graphics. As I've worked as a graphic designer, I've taken on the worlds of photo and video. I've had the pleasure of working with clients up and down the West Coast and served as an in-house graphic designer and videographer.</p>
+    <!-- contact -->
+    <article class="contact">
+      <h1>Contact</h1>
+      <p>Bellingham, WA</p>
     </article>
-
+    
     <!-- copyright info -->
     <footer>
       <p>&copy; 2015 Dean Davidson</p>
