--- a/work.html
+++ b/work.html
@@ -27,10 +27,15 @@
       </nav>
     </header>
     
-    <!-- introduction -->
-    <article class="intro">
-      <h1>Hi, I'm Dean Davidson.</h1>
-      <p class="bodycopy">I'm a visual artist living in Bellingham, Washington, with my wife, son, two cats, frogs, and Rosie the tarantula. I specialize in graphic design with brand development, print layout, and motion graphics. As I've worked as a graphic designer, I've taken on the worlds of photo and video. I've had the pleasure of working with clients up and down the West Coast and served as an in-house graphic designer and videographer.</p>
+    <!-- work -->
+    <article class="work">
+      <h1>Work</h1>
+      <img src="images/ucr-poster.jpg" alt="UCR poster detail">
+      <img src="images/wcgec.jpg" alt="Winston Chung Global Energy Center logo">
+      <img src="images/botaniclean.jpg" alt="BotaniClean label detail">
+      <img src="images/cambie.jpg" alt="Cambie typeface detail">
+      <img src="images/v3-card.jpg" alt="Valentine's Day letterpress card">
+      <img src="images/gfx-reel.jpg" alt="Motion graphic reel">
     </article>
 
     <!-- copyright info -->
