Optimized for accessibility

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dean Davidson // Graphic Design / Video / Photo</title>
+    <title>Dean Davidson Portfolio for Graphic Design, Video, and Photo</title>
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans%7CQuicksand%7CVollkorn' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
@@ -16,6 +16,7 @@
       <a href="index.html"><img src="images/dpd-logo-01.svg" alt="DPD logo"></a>
       
       <!-- main nav -->
+      <a href="#content" class="offscreen">skip to content</a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -28,7 +29,7 @@
     </header>
     
     <!-- introduction -->
-    <article class="intro">
+    <article class="intro" id="content">
       <h1>Hi, I'm Dean Davidson.</h1>
       <p class="bodycopy">I'm a visual artist living in Bellingham, Washington, with my wife, son, two cats, frogs, and Rosie the tarantula. I specialize in graphic design with brand development, print layout, and motion graphics. As I've worked as a graphic designer, I've taken on the worlds of photo and video. I've had the pleasure of working with clients up and down the West Coast and served as an in-house graphic designer and videographer.</p>
     </article>
